--- a/trainingKadai/kadai05_1.html
+++ b/trainingKadai/kadai05_1.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>課題</title>
 </head>
+<style>
+    .button-container {
+            display: flex;
+            gap: 10px; 
+        }
+</style>
+
 <body>
+    <h2>a=10,B=4の場合</h2>
+    <div  class="button-container">
+
     <p><button onclick="add();">足し算</button></p>
     <p><button onclick="subtract();">引き算</button></p>
     <p><button onclick="multiply();">掛け算</button></p>
     <p><button onclick="divide();">割り算</button></p>
 
+    </div>
     <script>
         let a = 10;
         let b = 4;
