--- a/trainingKadai/kadai06_2.html
+++ b/trainingKadai/kadai06_2.html
@@ -18,11 +18,12 @@
 
     <h3>東京会場<span id="text">(予約受付中)</span></h3>
     <button id="chanege" onclick="changeTxet()">予約する</button>
-    <p id="message">ありがとうございました</p>
+    
 
 <script>
     function changeTxet(){
         document.getElementById("text").innerHTML = "(予約済み)";
+        document.getElementById("chanege").outerHTML = "ありがとうございました";
         
     }
 </script>
